# core-ds-transaction-scoring

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: dev-deployment.yaml  prod-deployment.yaml
app/: config.py  main.py  models.py
app/db/: mongo_client.py  operations.py
